Fix tags wrap

--- a/web/components/page-tags/page-tags.styles.module.scss
+++ b/web/components/page-tags/page-tags.styles.module.scss
@@ -2,12 +2,15 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
+    overflow: hidden;
+    
 }
 
 .tagItem {
     background-color: var(--color-yellow);
     padding: 0.5rem;
-    margin: 1rem 0.5rem;
+    margin: 0.5rem;
     border-radius: 0.25rem;
     font-size: 1.1rem;
     cursor: pointer;
